# Ignoto

./: README.md  docker-compose.yml
bridge-python/: requirements.txt
bridge-python/src/: main.py
core-rust/: Cargo.toml  Dockerfile
core-rust/circuits/: Cargo.toml
core-rust/circuits/src/: lib.rs
core-rust/node/: Cargo.toml
core-rust/node/src/: main.rs
core-rust/pallets/ignoto/: Cargo.toml
core-rust/pallets/ignoto/src/: lib.rs
core-rust/pallets/runtime/: Cargo.toml  build.rs
core-rust/pallets/runtime/src/: lib.rs
router-go/: go.mod
router-go/cmd/: main.go
router-go/internal/adapters/: tor_client.go
router-go/internal/core/: router.go
router-go/internal/ports/: http.go
router-go/scripts/: canary.go
